# last-fm-to-spotify

./: .gitignore  LICENSE  README.md  config_example.ini  main.py  pyproject.toml  rain_depth_interview.ipynb  selenium_test.ipynb  step_thru.ipynb
clients/: last_fm.py  spotify.py
