[tool.poetry]
name = "last_fm_to_spotify"
version = "0.0.1"
description = "Create Spotify playlist from Last.fm scrobble playback history for a given time range"
authors = ["Joe Bryan <bryan.joe@gmail.com>"]

[tool.poetry.dependencies]
pendulum = "^2.1.2"
python = "^3.11"
pylast = "^5.1.0"
spotipy = "^2.22.0"

[build-system]
requires = ["poetry~=1.2"]
build-backend = "poetry.masonry.api"
